Comp213 Final_Project #5

--- a/Semester_1/Web_Interface_Design/Final_Project/home.html
+++ b/Semester_1/Web_Interface_Design/Final_Project/home.html
@@ -1,3 +1,5 @@
+<!-- Julián Sellanes 301494667-->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,22 +12,43 @@
     </head>
     <body>
         <div id="home-main">
+            <div class="header">
+                <div id="headerLeft">
+                    <a href="./home.html">
+                        <img src="./Imgs/logo-pic.png">
+                    </a>
+                    <div id="headerLeft-texts">
+                        <label><b>WEB HOSTING</b></label>
+                        <label>CANADA</label>
+                    </div>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="login.html">Hosting & Servers</a></li>
+                        <li><a href="registration.html">Domains</a></li>
+                        <li><a href="plans.html">Websites & Email</a></li>
+                        <li><a href="plans.html">Marketing & SEO</a></li>
+                        <li><a href="plans.html">Security & SSL</a></li>
+                        <li><a href="plans.html">Hot Deals</a></li>
+                    </ul>
+                </nav>
+            </div>
             <div id="home-search">
                 <div id="home-search-inputWrapper">
                     <input type="text" id="home-search-bar" placeholder="Find your perfect domain">
                     <input type="submit" id="home-search-bttn" value="Search">
                 </div>
                 <div class="home-search-div">
-                    <img src="./Imgs/logo-pic.png">
-                    <label>C$9.99</label>
+                    <img src="./Imgs/ca-icon.png">
+                    <label>C$10.99</label>
                 </div>
                 <div class="home-search-div">
-                    <img src="./Imgs/logo-pic.png">
-                    <label>C$9.99</label>
+                    <img src="./Imgs/com-icon.png">
+                    <label>C$15.49</label>
                 </div>
                 <div class="home-search-div">
-                    <img src="./Imgs/logo-pic.png">
-                    <label>C$9.99</label>
+                    <img src="./Imgs/org-icon.png">
+                    <label>C$11.49</label>
                 </div>
             </div>
             <div id="home-hero">
@@ -41,19 +64,105 @@
                     <i class="fa fa-cloud-upload" id="home-content-div-icon"></i>
                     <h4 class="home-content-div-h4">Cloud Servers</h4>
                     <p class="home-content-div-p">Take full control with our fastest virtual servers</p>
-                    <input type="submit" class="home-content-bttn" value="Get Hosting">
+                    <input type="submit" class="home-content-bttn" value="Compare Clouds">
                 </div>
                 <div class="home-content-div">
                     <i class="fa fa-hdd-o" id="home-content-div-icon"></i>
                     <h4 class="home-content-div-h4">Dedicated Servers</h4>
                     <p class="home-content-div-p">Boost your business with dedicated hardware</p>
-                    <input type="submit" class="home-content-bttn" value="Get Hosting">
+                    <input type="submit" class="home-content-bttn" value="View Servers">
                 </div>
                 <div class="home-content-div">
                     <i class="fa fa-wordpress" id="home-content-div-icon"></i>
                     <h4 class="home-content-div-h4">WordPress</h4>
                     <p class="home-content-div-p">Manage your WordPress websites easily</p>
                     <input type="submit" class="home-content-bttn" value="Get WordPress">
+                </div>
+            </div>
+            <div class="footer">
+                <div class="footer-top">
+                    <h2>Ready to Get Started? We're available 24/7!</h2>
+                    <div class="footer-top-div">
+                        <input type="submit" class="footer-top-bttn" value="Call us at 1-514-504-2113">
+                        <input type="submit" class="footer-top-bttn" value="Chat with us">
+                        <input type="submit" class="footer-top-bttn" value="Search your Perfect Domain">
+                    </div>
+                </div>
+                <div class="footer-bot">
+                    <div class="footer-bot-div1">
+                        <div class="footer-bot-div2">
+                            <h4>Hosting & Servers</h4>
+                            <a href="">Canadian Web Hosting</a>
+                            <a href="">Canadian Cloud Servers</a>
+                            <a href="">Reseller Web Hosting</a>
+                            <a href="">Dedicated Servers</a>
+                            <a href="">Managed WordPress</a>
+                            <a href="">Anycast DNS</a>
+                            <a href="">Free Website Migration</a>
+                        </div>
+                        <div class="footer-bot-div2">
+                            <h4>Domains & Websites</h4>
+                            <a href="">Domain Name Search</a>
+                            <a href="">Domain Name Transfer</a>
+                            <a href="">Weebly Site Builder</a>
+                        </div>
+                        <div class="footer-bot-div2">
+                            <h4>Security & SSL</h4>
+                            <a href="">SSL Certificates</a>
+                            <a href="">SiteSafe Protection</a>
+                            <a href="">Enterprise Anti-Spam</a>
+                            <a href="">Domain Privacy</a>
+                            <a href="">Protection</a>
+                        </div>
+                        <div class="footer-bot-div2">
+                            <h4>Online Marketing</h4>
+                            <a href="">Search Engine</a>
+                            <a href="">Optimization</a>
+                            <a href="">Email Marketing</a>
+                            <a href="">Affiliate Program</a>
+                        </div>
+                        <div class="footer-bot-div2">
+                            <h4>Company</h4>
+                            <a href="">Blog & News</a>
+                            <a href="">About WHC</a>
+                            <a href="">WHC Reviews</a>
+                            <a href="">Green Web Hosting</a>
+                            <a href="">Contact us</a>
+                            <a href="">Careers</a>
+                        </div>
+                        <div class="footer-bot-div2">
+                            <h4>Support</h4>
+                            <a href="">Help Center</a>
+                            <a href="">Open Support Ticket</a>
+                            <a href="">Check System Status</a>
+                        </div>
+                    </div>
+                    <div class="footer-bot-div3">
+                        <div class="footer-bot-div4">
+                            <p>Follow us</p>
+                            <a href="https://www.facebook.com/WHC.CA" target="_blank">
+                                <img src="./Imgs/facebook-icon.png">
+                            </a>
+                            <a href="https://www.twitter.com/webhostcanada" target="_blank">
+                                <img src="./Imgs/twitter-icon.png">
+                            </a>
+                            <a href="https://www.linkedin.com/company/web-hosting-canada/" target="_blank">
+                                <img src="./Imgs/linkedin-icon.png">
+                            </a>
+                            <a href="https://www.instagram.com/whc.ca" target="_blank">
+                                <img src="./Imgs/ig-icon.png">
+                            </a>
+                            <a href="https://www.youtube.com/c/WhcCa" target="_blank">
+                                <img src="./Imgs/yt-icon.png">
+                            </a>
+                        </div>
+                        <div class="footer-bot-div5">
+                            <i class="fa fa-phone"></i>
+                            <p>1 514 504-2113</p>
+                            <i class="fa fa-map-marker"></i>
+                            <p>7250 Clark Street #301, Montreal, Quebec H2R 2Y3 Canada</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
