--- a/Semester_1/Web_Interface_Design/Final_Project/login.html
+++ b/Semester_1/Web_Interface_Design/Final_Project/login.html
@@ -1,3 +1,5 @@
+<!-- Julián Sellanes 301494667-->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,7 +14,7 @@
         <div id="login-main">
             <div id="login-div1">
                 <div id="login-divTop">
-                    <a href="">
+                    <a href="home.html">
                         <img src="./Imgs/logo-pic.png">
                     </a>
                     <h4>Log in to WHC</h4>
@@ -33,8 +35,14 @@
                     <input type="submit" id="login-bttn" value="Log In">
                 </div>
                 <div id="login-divBot">
-                    <label>New to WHC?</label>
-                    <a href="">Sign up</a>
+                    <div id="login-divBot-left">
+                        <label>New to WHC?</label>
+                        <a href="registration.html">Sign up</a>
+                    </div>
+                    <div id="login-divBot-right">
+                        <i class="fa fa-refresh" id="login-input-icon"></i>
+                        <label>FR</label>
+                    </div>
                 </div>
             </div>
         </div>
