--- a/Semester_1/Web_Interface_Design/Final_Project/plans.html
+++ b/Semester_1/Web_Interface_Design/Final_Project/plans.html
@@ -1,3 +1,5 @@
+<!-- Julián Sellanes 301494667-->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,7 +14,7 @@
         <div id="plans-main">
             <div class="header">
                 <div id="headerLeft">
-                    <a href="" target="_blank">
+                    <a href="./home.html">
                         <img src="./Imgs/logo-pic.png">
                     </a>
                     <div id="headerLeft-texts">
@@ -22,12 +24,12 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="">Hosting & Servers</a></li>
-                        <li><a href="">Domains</a></li>
-                        <li><a href="">Websites & Email</a></li>
-                        <li><a href="">Marketing & SEO</a></li>
-                        <li><a href="">Security & SSL</a></li>
-                        <li><a href="">Hot Deals</a></li>
+                        <li><a href="login.html">Hosting & Servers</a></li>
+                        <li><a href="registration.html">Domains</a></li>
+                        <li><a href="plans.html">Websites & Email</a></li>
+                        <li><a href="plans.html">Marketing & SEO</a></li>
+                        <li><a href="plans.html">Security & SSL</a></li>
+                        <li><a href="plans.html">Hot Deals</a></li>
                     </ul>
                 </nav>
             </div>
@@ -44,7 +46,9 @@
                             <p class="plans-col-div-p4">C$8.99</p>
                             <p class="plans-col-div-p5">SAVE 57%</p>
                         </div>
-                        <input type="submit" class="plans-addto-bttn" value="Add to Cart">
+                        <form action="login.html">
+                            <input type="submit" class="plans-addto-bttn" value="Add to Cart">
+                        </form>
                         <ul class="plans-col-div-ul">
                             <li>
                                 <i class="fa fa-tachometer" id="plans-col-div-ul-icon"></i>
@@ -89,15 +93,200 @@
                                 <p>Site Migration</p>
                                 <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
                             </li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
                         </ul>
                     </div>
                     <div class="plans-col-div">
+                        <label id="label-red">Most Popular</label>
                         <i class="fa fa-rocket" id="plans-col-div-icon"></i>
-                        <h4 class="plans-col-div-h4">Starter</h4>
+                        <h4 class="plans-col-div-h4">Pro</h4>
+                        <p class="plans-col-div-p1">Pro performance, premium features, free domain, and more!</p>
+                        <p class="plans-col-div-p2">As low as</p>
+                        <p class="plans-col-div-p3">C$3.92<span class="plans-col-div-span1">/mo</span></p>
+                        <div class="plans-col-div-texts">
+                            <p class="plans-col-div-p4">C$11.99</p>
+                            <p class="plans-col-div-p5">SAVE 67%</p>
+                        </div>
+                        <form action="login.html">
+                            <input type="submit" class="plans-addto-bttn" value="Add to Cart">
+                        </form>
+                        <ul class="plans-col-div-ul">
+                            <li>
+                                <i class="fa fa-tachometer" id="plans-col-div-ul-icon"></i>
+                                <p>PRO</p>
+                                <p>Performance</p>
+                                <i class="fa fa-bolt" id="plans-col-div-ul-icon-red"></i>
+                                <i class="fa fa-bolt" id="plans-col-div-ul-icon-red"></i>
+                                <i class="fa fa-bolt" id="plans-col-div-ul-icon"></i>
+                                <i class="fa fa-bolt" id="plans-col-div-ul-icon"></i>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-laptop" id="plans-col-div-ul-icon"></i>
+                                <p>Unlimited</p>
+                                <p>Websites</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-server" id="plans-col-div-ul-icon"></i>
+                                <p>Unlimited</p>
+                                <p>Space & Traffic</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-leaf" id="plans-col-div-ul-icon-green"></i>
+                                <p>Powered</p>
+                                <p>by renewable energy</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-envelope" id="plans-col-div-ul-icon"></i>
+                                <p>All-Inclusive</p>
+                                <p>PRO Email</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-cubes" id="plans-col-div-ul-icon"></i>
+                                <p>Standard</p>
+                                <p>Hosting Features</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-exchange" id="plans-col-div-ul-icon"></i>
+                                <p>Free</p>
+                                <p>Site Migration</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-globe" id="plans-col-div-ul-icon"></i>
+                                <p>Free</p>
+                                <p>Domain</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-wordpress" id="plans-col-div-ul-icon"></i>
+                                <p>Optimized</p>
+                                <p>for WordPress</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-diamond" id="plans-col-div-ul-icon"></i>
+                                <p>Premium</p>
+                                <p>Features</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-paper-plane" id="plans-col-div-ul-icon"></i>
+                                <p>Email Marketing</p>
+                                <p>(500 contacts)</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-lock" id="plans-col-div-ul-icon"></i>
+                                <p>SSL</p>
+                                <p>Certificate</p>
+                            </li>
+                            <li></li>
+                        </ul>
                     </div>
                     <div class="plans-col-div">
                         <i class="fa fa-building" id="plans-col-div-icon"></i>
-                        <h4 class="plans-col-div-h4">Starter</h4>
+                        <h4 class="plans-col-div-h4">Enterprise</h4>
+                        <p class="plans-col-div-p1">Best performance for demanding websites, with SSL & dedicated IP.</p>
+                        <p class="plans-col-div-p2">As low as</p>
+                        <p class="plans-col-div-p3">C$11.89<span class="plans-col-div-span1">/mo</span></p>
+                        <div class="plans-col-div-texts">
+                            <p class="plans-col-div-p4">C$20.99</p>
+                            <p class="plans-col-div-p5">SAVE 43%</p>
+                        </div>
+                        <form action="login.html">
+                            <input type="submit" class="plans-addto-bttn" value="Add to Cart">
+                        </form>
+                        <ul class="plans-col-div-ul">
+                            <li>
+                                <i class="fa fa-tachometer" id="plans-col-div-ul-icon"></i>
+                                <p>ENTERPRISE</p>
+                                <p>Performance</p>
+                                <i class="fa fa-bolt" id="plans-col-div-ul-icon-red"></i>
+                                <i class="fa fa-bolt" id="plans-col-div-ul-icon-red"></i>
+                                <i class="fa fa-bolt" id="plans-col-div-ul-icon-red"></i>
+                                <i class="fa fa-bolt" id="plans-col-div-ul-icon-red"></i>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-laptop" id="plans-col-div-ul-icon"></i>
+                                <p>Unlimited</p>
+                                <p>Websites</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-server" id="plans-col-div-ul-icon"></i>
+                                <p>Unlimited</p>
+                                <p>Space & Traffic</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-leaf" id="plans-col-div-ul-icon-green"></i>
+                                <p>Powered</p>
+                                <p>by renewable energy</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-envelope" id="plans-col-div-ul-icon"></i>
+                                <p>All-Inclusive</p>
+                                <p>ENTERPRISE Email</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-cubes" id="plans-col-div-ul-icon"></i>
+                                <p>Standard</p>
+                                <p>Hosting Features</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-exchange" id="plans-col-div-ul-icon"></i>
+                                <p>Free</p>
+                                <p>Site Migration</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-globe" id="plans-col-div-ul-icon"></i>
+                                <p>Free</p>
+                                <p>Domain</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-wordpress" id="plans-col-div-ul-icon"></i>
+                                <p>Optimized</p>
+                                <p>for WordPress</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-diamond" id="plans-col-div-ul-icon"></i>
+                                <p>Premium</p>
+                                <p>Features</p>
+                                <i class="fa fa-info-circle" id="plans-col-div-ul-icon-blue"></i>
+                            </li>
+                            <li>
+                                <i class="fa fa-paper-plane" id="plans-col-div-ul-icon"></i>
+                                <p>Email Marketing</p>
+                                <p>(1000 contacts)</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-lock" id="plans-col-div-ul-icon"></i>
+                                <p>SSL</p>
+                                <p>Certificate</p>
+                            </li>
+                            <li>
+                                <i class="fa fa-star" id="plans-col-div-ul-icon"></i>
+                                <p>Dedicated</p>
+                                <p>IP</p>
+                            </li>
+                        </ul>
                     </div>
             </div>
             <div class="footer">
@@ -161,19 +350,19 @@
                     <div class="footer-bot-div3">
                         <div class="footer-bot-div4">
                             <p>Follow us</p>
-                            <a href="" target="_blank">
+                            <a href="https://www.facebook.com/WHC.CA" target="_blank">
                                 <img src="./Imgs/facebook-icon.png">
                             </a>
-                            <a href="" target="_blank">
+                            <a href="https://www.twitter.com/webhostcanada" target="_blank">
                                 <img src="./Imgs/twitter-icon.png">
                             </a>
-                            <a href="" target="_blank">
+                            <a href="https://www.linkedin.com/company/web-hosting-canada/" target="_blank">
                                 <img src="./Imgs/linkedin-icon.png">
                             </a>
-                            <a href="" target="_blank">
+                            <a href="https://www.instagram.com/whc.ca" target="_blank">
                                 <img src="./Imgs/ig-icon.png">
                             </a>
-                            <a href="" target="_blank">
+                            <a href="https://www.youtube.com/c/WhcCa" target="_blank">
                                 <img src="./Imgs/yt-icon.png">
                             </a>
                         </div>
