--- a/Semester_1/Web_Interface_Design/Final_Project/registration.html
+++ b/Semester_1/Web_Interface_Design/Final_Project/registration.html
@@ -1,3 +1,5 @@
+<!-- Julián Sellanes 301494667-->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,7 +14,7 @@
         <div id="regis-main">
             <div id="regis-div1">
                 <div id="regis-divTop">
-                    <a href="" target="_blank">
+                    <a href="home.html">
                         <img src="./Imgs/logo-pic.png">
                     </a>
                     <h4>Create an Account</h4>
@@ -22,7 +24,6 @@
                     <div class="regis-div2">
                         <div class="regis-inputWrapper">
                             <i class="fa fa-user" id="regis-input-icon"></i>
-                            <!-- <img src="./Imgs/user-icon.png"> -->
                             <input type="text" placeholder="First Name">
                         </div>
                         <div class="regis-inputWrapper">
@@ -102,8 +103,14 @@
                     <input type="submit" id="regis-bttn" value="Register">
                 </div>
                 <div id="regis-divBot">
-                    <label>Already a client?</label>
-                    <a href="">Log in</a>
+                    <div id="regis-divBot-left">
+                        <label>Already a client?</label>
+                        <a href="login.html">Log in</a>
+                    </div>
+                    <div id="regis-divBot-right">
+                        <i class="fa fa-refresh" id="regis-input-icon"></i>
+                        <label>FR</label>
+                    </div>
                 </div>
             </div>
         </div>
